--- a/templates/layouts/form.html
+++ b/templates/layouts/form.html
@@ -30,7 +30,8 @@
 
 <!-- scripts -->
 <script src="/static/js/libs/modernizr-2.8.2.min.js"></script>
-<!--[if lt IE 9]><script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
+<!--[if lt IE 9]>
+    <script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
 <!-- /scripts -->
 
 </head>
