--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -31,7 +31,8 @@
 <script src="/static/js/libs/modernizr-2.8.2.min.js"></script>
 <script src="/static/js/libs/moment.min.js"></script>
 <script type="text/javascript" src="/static/js/script.js" defer></script>
-<!--[if lt IE 9]><script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
+<!--[if lt IE 9]>
+    <script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
 <!-- /scripts -->
 </head>
 <body>
